add progress reader

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
             'org.springframework.boot:spring-boot-starter',
             'org.springframework.boot:spring-boot-starter-web',
             'org.springframework.boot:spring-boot-starter-webflux',
-            'com.squareup.okhttp3:okhttp'
+            'com.squareup.okhttp3:okhttp',
+            'com.fasterxml.jackson.core:jackson-databind:2.9.0',
+            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0'
     )
     testImplementation(
             'org.springframework.boot:spring-boot-starter-test',
